Set minimum height for the modal to fix a Safari layout issue

--- a/assets/css/site/contexts/modals/_contact-form.scss
+++ b/assets/css/site/contexts/modals/_contact-form.scss
@@ -4,6 +4,7 @@
     padding: $contentPadding 8 * $contentPadding;
     width: 100%;
     max-width: 800px;
+    min-height: 600px;
 
     @include medium() {
       padding: 0;
